part2/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: img
          persistentVolumeClaim:
            claimName: img-claim
      containers:
        - name: project
          image: snottis/project:v0.7
          imagePullPolicy: Always
          volumeMounts:
            - name: img
              mountPath: /img
