part2/project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project # This is the app as declared in the deployment.
  ports:
    - name: api
      protocol: TCP
      port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3000 # This is the target port
    - name: front
      protocol: TCP
      port: 1235
      targetPort: 3001
